--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,30 @@ services:
     volumes:
       - ./web:/web
 
-  
+  mysql:
+    image: mariadb:latest
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: 'root'
+      MARIADB_USER: 'samuel'
+      MARIADB_PASSWORD: 'secr3t'
+      MARIADB_DATABASE: 'test_db'
+    ports:
+      - 3306:3306
+    volumes:
+      - mysqldata:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    restart: always
+    ports:
+      - 8081:80
+    environment:
+      PMA_HOST: mysql
+    depends_on:
+      - mysql
+
+
+volumes:
+  mysqldata: {}
+      
